// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Identity reducer handles actions handles setErrors 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "id": null,
    "name": "",
    "onionAddress": "",
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
  },
  "errors": "this is some error",
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to false 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "id": null,
    "name": "",
    "onionAddress": "",
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
  },
  "errors": "",
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setFetchingBalance to true 1`] = `
Object {
  "data": Object {
    "address": "",
    "addresses": Array [],
    "id": null,
    "name": "",
    "onionAddress": "",
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "",
    "signerPubKey": "",
  },
  "errors": "",
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;

exports[`Identity reducer handles actions handles setIdentity 1`] = `
Object {
  "data": Object {
    "address": "testaddress",
    "addresses": Array [],
    "id": "test-id",
    "keys": Object {
      "sk": "sapling-private-key",
      "tpk": "transparent-private-key",
    },
    "name": "Saturn",
    "onionAddress": "",
    "shieldingTax": true,
    "shippingData": Object {
      "city": "",
      "country": "",
      "firstName": "",
      "lastName": "",
      "postalCode": "",
      "region": "",
      "street": "",
    },
    "signerPrivKey": "test-hex-key",
    "signerPubKey": "test-hex-key",
    "transparentAddress": "transparent-test-address",
  },
  "errors": "",
  "loader": Object {
    "loading": false,
    "message": "",
  },
  "registrationStatus": Object {
    "nickname": "",
    "status": "UNREGISTERED",
    "takenUsernames": Array [],
  },
  "removedChannels": Array [],
  Symbol(immer-draftable): true,
}
`;
